# sfml_easy_aim_game

./: CMakeLists.txt  README.md  main.cpp  project_aim
Circle/: Circle.cpp  Circle.h
Game/: Game.cpp  Game.h
